content: add copyright notice

--- a/content/assets/pointer-params/fields/Makefile
+++ b/content/assets/pointer-params/fields/Makefile
@@ -1,3 +1,8 @@
+# Copyright (c) 2020 The golang.design Initiative Authors.
+# All rights reserved.
+#
+# The code below is produced by Changkun Ou <hi@changkun.de>.
+
 all:
 	go generate
 	perflock -governor 80% go test -v -run=none -bench=. -count=10 | tee inline.txt
