--- a/config.toml
+++ b/config.toml
@@ -11,19 +11,24 @@ theme = "research"
 
 [menu]
   [[menu.main]]
-        identifier = "posts"
-        name = "Posts"
-        url = "/posts/"
-        weight = 1 
+    identifier = "posts"
+    name = "Posts"
+    url = "/posts/"
+    weight = 1
   [[menu.main]]
-        identifier = "tags"
-        name = "Tags"
-        url = "/tags/"
-        weight = 2
+    identifier = "tags"
+    name = "Tags"
+    url = "/tags/"
+    weight = 2
   [[menu.footer]]
-        name = "GitHub"
-        url = "https://github.com/golang-design/research"
-        weight = 1 
+    name = "GitHub"
+    url = "https://github.com/golang-design/research"
+    weight = 2
+  [[menu.footer]]
+    name = "Contact"
+    url = "https://golang.design/s/email"
+    weight = 1
+
 [markup]
   [markup.highlight]
     anchorLineNos = false
