themes: add disqus

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ baseURL = "https://golang.design/research"
 languageCode = "en-us"
 title = "golang.design/research"
 theme = "research"
+disqusShortname = "golang-design-research"
+
 [permalinks]
   posts = "/:slug"
 
